--- a/.htaccess
+++ b/.htaccess
@@ -69,7 +69,7 @@ RewriteRule .* staticpublisher/main.php?url=%1&%{QUERY_STRING} [L]
 
 #php_value error_reporting 2147483647
 php_flag display_errors on
-php_flag memory_limit 256M
+php_value memory_limit 256M
 
 # ------------------------------------------------------------------------------
 # | UTF-8 encoding                                                             |
