--- a/mysite/_config/config.yml
+++ b/mysite/_config/config.yml
@@ -10,4 +10,9 @@ Page:
 Page_Controller:
   extensions:
     - DivisionPage_Controller
-
+HomePageFeature:
+  extensions:
+    - HomePageFeatureExtension
+SidebarItem:
+  extensions:
+    - SidebarItemExtension
