update to division-project templates

--- a/composer.json
+++ b/composer.json
@@ -1,25 +1,27 @@
 {
-	"name": "md/division-project-installer",
-	"description": "The SilverStripe Framework Installer",
-	"require": {
-		"php": ">=5.3.2",
-		"md/division-project": "1.3.x-dev",
-        "silverstripe/activedirectory" : "3.*"
-	},
-	"config": {
-		"process-timeout": 600	
-	},
-	"minimum-stability": "dev",
-	
+    "name": "silverstripe/installer",
+    "description": "The SilverStripe Framework Installer",
+    "minimum-stability": "dev",
+    "require": {
+        "php": ">=5.3.2",
+        "md/division-project": "2.0.x"
+        
+
+    },
+    "config": {
+        "process-timeout": 600  
+    },
+    
+    
     "repositories": [
         {
             "type": "vcs",
-            "url": "https://github.com/StudentLifeMarketingAndDesign/division-project-installer"
+            "url": "https://github.com/StudentLifeMarketingAndDesign/division-project"
       
         },
         {
             "type": "vcs",
-            "url": "https://github.com/StudentLifeMarketingAndDesign/division-project"
+            "url": "https://github.com/StudentLifeMarketingAndDesign/division-analytics"
       
         },
         {
@@ -35,19 +37,20 @@
         {
             "type": "vcs",
             "url": "https://github.com/StudentLifeMarketingAndDesign/rss-display"
+
         },
         {
             "type": "vcs",
             "url": "https://github.com/StudentLifeMarketingAndDesign/silverstripe-flickr"
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/StudentLifeMarketingAndDesign/silverstripe-activedirectory"
 
         },
         {
              "type": "vcs",
-             "url": "https://github.com/StudentLifeMarketingAndDesign/silverstripe-betternavigator"
+             "url": "https://github.com/StudentLifeMarketingAndDesign/silverstripe-activedirectory"
+        },
+        {
+             "type": "vcs",
+             "url": "https://github.com/StudentLifeMarketingAndDesign/fbpagefeed"
         }
     ]
 
