--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,11 @@
         },
         {
             "type": "vcs",
+            "url": "https://github.com/StudentLifeMarketingAndDesign/silverstripe-amp"
+      
+        },
+        {
+            "type": "vcs",
             "url": "https://github.com/StudentLifeMarketingAndDesign/ac-json-events"
 
         },
