updated to ss4.x

--- a/mysite/_config/config.yml
+++ b/mysite/_config/config.yml
@@ -1,7 +1,5 @@
 ---
-Name: mysite
-After:
-  - 'framework/*'
-  - 'cms/*'
+Name: myproject
 ---
-
+SilverStripe\Core\Manifest\ModuleManifest:
+  project: mysite
