--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
             "4.x-dev": "4.2.x-dev",
             "dev-master": "5.x-dev"
         },
+        "resources-dir": "_resources",
         "project-files-installed": [
             "app/.htaccess",
             "app/_config.php",
@@ -47,15 +48,7 @@
         },
         {
             "type": "vcs",
-            "url": "https://github.com/StudentLifeMarketingAndDesign/silverstripe-amp"
-        },
-        {
-            "type": "vcs",
             "url": "https://github.com/StudentLifeMarketingAndDesign/division-analytics"
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/StudentLifeMarketingAndDesign/division-bar"
         },
         {
             "type": "vcs",
@@ -71,23 +64,7 @@
         },
         {
             "type": "vcs",
-            "url": "https://github.com/StudentLifeMarketingAndDesign/rss-display"
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/StudentLifeMarketingAndDesign/silverstripe-blog"
-        },
-        {
-            "type": "vcs",
             "url": "https://github.com/StudentLifeMarketingAndDesign/silverstripe-flickr"
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/StudentLifeMarketingAndDesign/silverstripe-activedirectory"
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/StudentLifeMarketingAndDesign/fbpagefeed"
         },
         {
             "type": "vcs",
